2000-07-18  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c: Provide format attribute for error() for versions of gcc
	that support it.

	* configure.in (LOGINLIBS): Test for crypt() in crypt library only
	modifies LOGINLIBS.

2000-07-03  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Remove linking of krb5util library from
	applications that never use it.

2000-06-29  Ken Raeburn  <raeburn@mit.edu>

	Patch from Donn Cave and Leonard Peirce from 1.1 release cycle:
	* login.c (k_init): Call krb5_cc_set_default_name right after
	setting the environment variable.
	(main): Likewise.

2000-06-23  Ken Raeburn  <raeburn@mit.edu>

	* rcp.M, rsh.M, rlogin.M: Add description of new -PO, -PN
	options.

2000-06-19  Tom Yu  <tlyu@mit.edu>

	* krshd.c (recvauth): Call krb5_recvauth_version() rather than
	calling krb5_recvauth() with arguments intended for
	krb5_recvauth_version().

	* kcmd.c: Conditionalize krb_sendauth prototype based on sense of
	KRB5_KRB4_COMPAT.

2000-06-15  Tom Yu  <tlyu@mit.edu>

	* login.c (try_convert524): Add use_ccache argument.  Handle case
	where we have gotten v5 creds via password being entered and don't
	crash in that case, since previous code was assuming that v5 creds
	were always being provided.  Adapted from patch by Bob Basch.

2000-06-10  Ken Raeburn  <raeburn@mit.edu>

	* krcp.c (main): Fix logic again, this time in the "success"
	case.  If there's a problem retrieving the new-protocol subkey,
	print a message and exit, don't fall back.
	* krsh.c (main): Ditto; don't look at enctype to try to guess
	protocol version.  Delete unused variable "similar".

2000-06-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Rework fallback logic.  Fall back to k4cmd
	unless encryption and the new protocol were both requested.

	* krsh.c (main): Rework fallback logic.  Fall back to k4cmd if new
	protocol wasn't requested.

	* krcp.c (main): Revert setting of AP_OPTS_MUTUAL_REQUIRED
	unconditionally, which was added by mistake with last set of